added logistic partial

--- a/Project/logistic.ipynb
+++ b/Project/logistic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,28 +27,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Iris-virginica', 'Iris-setosa', 'Iris-virginica', 'Iris-setosa',\n",
-       "       'Iris-setosa', 'Iris-setosa', 'Iris-virginica', 'Iris-versicolor',\n",
-       "       'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa',\n",
-       "       'Iris-virginica', 'Iris-virginica', 'Iris-versicolor',\n",
-       "       'Iris-setosa', 'Iris-virginica', 'Iris-virginica',\n",
-       "       'Iris-versicolor', 'Iris-versicolor', 'Iris-versicolor',\n",
-       "       'Iris-setosa', 'Iris-versicolor', 'Iris-virginica',\n",
-       "       'Iris-virginica', 'Iris-setosa', 'Iris-setosa', 'Iris-versicolor',\n",
-       "       'Iris-versicolor', 'Iris-versicolor'], dtype=object)"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#features and labels\n",
     "X=iris.iloc[:,0:4].values\n",
@@ -62,27 +43,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def logistic(x_train, y_train):\n",
-    "    w = 0\n",
-    "    w0 = 0\n",
+    "    w = np.zeros((x_train.shape[1], 3))\n",
+    "    w0 = np.zeros((x_train.shape[0], 1))\n",
+    "    alpha = 0.001\n",
+    "    cst = []\n",
+    "    it = []\n",
     "\n",
+    "    for i in range(100000):\n",
+    "        Z = (np.dot(x_train, w) + w0).T\n",
+    "        A = 1 / ( 1 + np.exp(-Z))\n",
+    "        A = A.T\n",
+    "        print(A)\n",
+    "        # cost = -(1/x_train.shape[0]) * np.sum(y_train * np.log(A) + (1 - y_train) * np.log(1 - A))\n",
+    "        dw = (1/X.shape[0]) * np.dot((A - y_train).T, x_train)\n",
+    "        dw0 = (1/X.shape[0]) * np.sum(A - y_train)\n",
+    "        w = w - alpha * (dw).T\n",
+    "        w0 = w0 - alpha * (dw0)\n",
+    "        it.append(i)\n",
+    "        # cst.append(cost)\n",
+    "\n",
+    "\n",
+    "    plt.plot(it, cst)\n",
+    "    plt.show()\n",
     "    return w, w0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_accuracy(w, w0, y_pred, y_test):\n",
     "    accuracy = 0\n",
     "    y_pred = []\n",
-    "    n = x_test.shape[0]\n",
+    "    n = y_test.shape[0]\n",
     "    for i in range(0, n):\n",
     "        if(y_test[i] == y_pred[i]):\n",
     "            accuracy+=1\n",
@@ -97,22 +97,16 @@
    "source": [
     "def predict(x_test, w, w0):\n",
     "    y_pred = []\n",
+    "    y_pred = x_test * w + w0\n",
+    "    y_pred = np.argmax(y_test, axis = 1)\n",
     "    return y_pred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "accuracy for multiclass logistic regression is : 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "w, w0 = logistic(X_train, y_train)\n",
     "y_pred = predict(X_test, w, w0)\n",
